whitespace fix

--- a/client/styles.css
+++ b/client/styles.css
@@ -20,8 +20,8 @@ html {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
-    background-image: url('res/blue2.png');
+    height: calc(100vh - env(safe-area-inset-bottom));
+    background-image: url('res/blue3.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -30,7 +30,7 @@ html {
 
 #root {
     width: 100%;
-    height: 100%;
+    height: calc(100vh - env(safe-area-inset-bottom));
     display: flex;
     flex-direction: column;
     background: transparent;
@@ -49,7 +49,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100%;
     margin: 0;
 }
 
